// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components : Common: Publication: Summary table renders correctly 1`] = `
<div>
  <table
    className="table"
  >
    <thead>
      <tr>
        <th
          className="alignLeft borderLeft"
          scope="col"
        >
          <span
            role="text"
          >
            <span
              className="headerLabel headerLabel1"
            >
              Cases
            </span>
          </span>
        </th>
        <th
          className="alignLeft borderLeft"
          scope="col"
        >
          <span
            role="text"
          >
            Negative
            <span
              className="headerLabel headerLabel2"
            >
              Tests
            </span>
          </span>
        </th>
        <th
          className=""
          scope="col"
        >
          <span
            role="text"
          >
            Pending
            <span
              className="headerLabelHidden headerLabel2"
            >
              Tests
            </span>
          </span>
        </th>
        <th
          className="alignLeft borderLeft"
          scope="col"
        >
          <span
            role="text"
          >
            Currently
            <span
              className="headerLabel headerLabel2"
            >
              Hospitalized
            </span>
          </span>
        </th>
        <th
          className=""
          scope="col"
        >
          <span
            role="text"
          >
            Cumulative
            <span
              className="headerLabelHidden headerLabel2"
            >
              Hospitalized
            </span>
          </span>
        </th>
        <th
          className="alignLeft borderLeft"
          scope="col"
        >
          <span
            role="text"
          >
            Currently
            <span
              className="headerLabel headerLabel2"
            >
              In ICU
            </span>
          </span>
        </th>
        <th
          className=""
          scope="col"
        >
          <span
            role="text"
          >
            Cumulative
            <span
              className="headerLabelHidden headerLabel2"
            >
              In ICU
            </span>
          </span>
        </th>
        <th
          className="alignLeft borderLeft"
          scope="col"
        >
          <span
            role="text"
          >
            Currently
            <span
              className="headerLabel headerLabel2"
            >
              On Ventilator
            </span>
          </span>
        </th>
        <th
          className=""
          scope="col"
        >
          <span
            role="text"
          >
            Cumulative
            <span
              className="headerLabelHidden headerLabel2"
            >
              On Ventilator
            </span>
          </span>
        </th>
        <th
          className="alignLeft borderLeft"
          scope="col"
        >
          <span
            role="text"
          >
            Recovered
            <span
              className="headerLabel headerLabel2"
            >
              Outcomes
            </span>
          </span>
        </th>
        <th
          className=""
          scope="col"
        >
          <span
            role="text"
          >
            Deaths
            <span
              className="headerLabelHidden headerLabel2"
            >
              Outcomes
            </span>
          </span>
        </th>
        <th
          className="alignLeft borderLeft wide"
          scope="col"
        >
          <span
            role="text"
          >
            Positive + Negative
            <span
              className="headerLabel headerLabel1"
            >
              Total Test Results
            </span>
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className="borderLeft"
        >
          4,572
        </td>
        <td
          className="borderLeft"
        >
          33,318
        </td>
        <td
          className=""
        >
          N/A
        </td>
        <td
          className="borderLeft"
        >
          N/A
        </td>
        <td
          className=""
        >
          594
        </td>
        <td
          className="borderLeft"
        >
          N/A
        </td>
        <td
          className=""
        >
          247
        </td>
        <td
          className="borderLeft"
        >
          N/A
        </td>
        <td
          className=""
        >
          148
        </td>
        <td
          className="borderLeft"
        >
          N/A
        </td>
        <td
          className=""
        >
          151
        </td>
        <td
          className="borderLeft"
        >
          37,890
        </td>
      </tr>
    </tbody>
  </table>
  <div
    className="detail-text detailText"
  >
    State’s last reported update time: 
    20200401
     
    <abbr
      aria-label="Eastern Time"
      title="Eastern Time"
    >
      ET
    </abbr>
  </div>
</div>
`;

exports[`Components : Common: Publication: Summary table renders correctly 2`] = `
<div>
  <table
    className="table"
  >
    <thead>
      <tr>
        <th
          className="alignLeft borderLeft"
          scope="col"
        >
          <span
            role="text"
          >
            <span
              className="headerLabel headerLabel1"
            >
              Cases
            </span>
          </span>
        </th>
        <th
          className="alignLeft borderLeft"
          scope="col"
        >
          <span
            role="text"
          >
            Negative
            <span
              className="headerLabel headerLabel2"
            >
              Tests
            </span>
          </span>
        </th>
        <th
          className="alignLeft"
          scope="col"
        >
          <span
            role="text"
          >
            Pending
            <span
              className="headerLabelHidden headerLabel2"
            >
              Tests
            </span>
          </span>
        </th>
        <th
          className="alignLeft borderLeft"
          scope="col"
        >
          <span
            role="text"
          >
            Recovered
            <span
              className="headerLabel headerLabel2"
            >
              Outcomes
            </span>
          </span>
        </th>
        <th
          className="alignLeft"
          scope="col"
        >
          <span
            role="text"
          >
            Deaths
            <span
              className="headerLabelHidden headerLabel2"
            >
              Outcomes
            </span>
          </span>
        </th>
        <th
          className="alignLeft borderLeft wide"
          scope="col"
        >
          <span
            role="text"
          >
            Positive + Negative
            <span
              className="headerLabel headerLabel1"
            >
              Total Test Results
            </span>
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className="alignLeft borderLeft"
        >
          4,572
        </td>
        <td
          className="alignLeft borderLeft"
        >
          33,318
        </td>
        <td
          className="alignLeft"
        >
          N/A
        </td>
        <td
          className="alignLeft borderLeft"
        >
          N/A
        </td>
        <td
          className="alignLeft"
        >
          151
        </td>
        <td
          className="alignLeft borderLeft"
        >
          37,890
        </td>
      </tr>
    </tbody>
  </table>
  <div
    className="detail-text detailText"
  >
    State’s last reported update time: 
    20200401
     
    <abbr
      aria-label="Eastern Time"
      title="Eastern Time"
    >
      ET
    </abbr>
  </div>
</div>
`;
